methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:11: error: not found: type int
def nbspas():int = {7 - getY }
             ^